--- a/app.json
+++ b/app.json
@@ -33,6 +33,6 @@
         }
     },
    "website": "https://github.com/hufyej26/rkyngjh",
-    "repository": "https://github.com/hufyej26/rkyngjn",
+    "repository": "https://github.com/hufyej26/rkyngjh",
     "stack": "container"
 }
